# HuffPressor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_error.txt  build_log.txt  build_log_11.txt  build_log_12.txt  build_log_13.txt  build_log_14.txt  build_log_15.txt  build_log_16.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  build_log_6.txt  build_log_7.txt  build_log_8.txt  build_log_9.txt  cmake_output.txt
data/: decompressed_new.txt
include/: archiver.h  bitReader.h  callbacks.h  compressor.h  config.h  decompressor.h  errors.h
src/: compressor.cpp  decompressor.cpp  main.cpp
src/cli/: main.cpp
src/core/: archiver.cpp  bitReader.cpp  bitWriter.cpp  compressor.cpp  decompressor.cpp  huffmanTree.cpp  utils.cpp
src/gui/: main.cpp  mainwindow.cpp  mainwindow.h  worker.cpp  worker.h
